# regvia

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  docker-compose.yml  regVia-master-jira.md  tech-debts.md
backend/: .env.example  .env.local.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2f36fa197b64_initial_schema.py  a0b1c2d3e4f5_knowledge_library.py  a1b2c3d4e5f6_configurable_embedding_dimensions.py  c1d2e3f4a5b6_add_users_table.py  e3f4a5b6c7d8_chat_session_user_title.py
backend/app/: main.py
backend/app/core/: auth.py  settings.py  telemetry.py
backend/app/db/: session.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  base.py  chat_session.py  chunk.py  document.py  embedding.py  message.py  summary.py  user.py
backend/app/schemas/: auth.py  chat.py  common.py  document.py  summary.py
backend/app/services/: embedding.py  google_oauth.py  processing.py  retrieval.py  summary.py  title_service.py
backend/app/storage/: client.py
backend/app/worker/: celery_app.py  tasks.py
backend/langsmith_evals/: golden_dataset.json  run_evals.py
backend/scripts/: seed.py
backend/tests/: conftest.py  factories.py
backend/tests/unit/: test_auth_endpoints.py  test_auth_service.py  test_celery_dispatch.py  test_chat_endpoint.py  test_chat_sessions_endpoint.py  test_chat_stream.py  test_chunking.py  test_document_status_endpoint.py  test_embedding_provider.py  test_google_oauth_service.py  test_health.py  test_library_endpoints.py  test_logging_middleware.py  test_models.py  (+6 more)
(+112 files in other folders)
